--- a/src/main/resources/ku/cs/editStock.fxml
+++ b/src/main/resources/ku/cs/editStock.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
@@ -107,15 +106,12 @@
                            </font>
                         </Label>
                         <Line endX="513.066650390625" endY="-7.62939453125E-6" layoutX="140.0" layoutY="80.0" startX="-100.0" stroke="#a05e07" strokeMiterLimit="100.0" />
-                        <ImageView fx:id="imageView" fitHeight="180.0" fitWidth="180.0" layoutX="240.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="imageView" fitHeight="200.0" fitWidth="150.0" layoutX="270.0" layoutY="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@image/Default.png" />
+                              <Image url="@image/addBookIMG.jpg" />
                            </image>
-                           <viewport>
-                              <Rectangle2D />
-                           </viewport>
                         </ImageView>
-                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="400.0" layoutY="260.0" mnemonicParsing="false" onAction="#handleAddImageButton" prefHeight="35.0" prefWidth="33.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="addImgButton" graphicTextGap="2.0" layoutX="400.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleAddImageButton" prefHeight="35.0" prefWidth="33.0" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" textAlignment="CENTER" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -164,7 +160,6 @@
                               <Font size="20.0" />
                            </font>
                         </Button>
-                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="740.0" onKeyReleased="#handleKeyBookDetail" prefHeight="130.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;" />
                         <Label layoutX="50.0" layoutY="520.0" text="สำนักพิมพ์">
                            <font>
                               <Font name="JasmineUPC" size="32.0" />
@@ -219,6 +214,7 @@
                               <Font name="JasmineUPC" size="12.0" />
                            </font>
                         </Label>
+                        <TextArea fx:id="bookDetailTextArea" layoutX="55.0" layoutY="740.0" onKeyReleased="#handleKeyBookDetail" prefHeight="130.0" prefWidth="270.0" />
                         <MenuButton fx:id="menuButton" layoutX="380.0" layoutY="455.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="270.0" style="-fx-background-color: FFFCF1; -fx-background-radius: 10;">
                           <items>
                             <MenuItem fx:id="cartoonMenuButton" mnemonicParsing="false" onAction="#handleCartoonMenuButton" text="หนังสือการ์ตูน" />
