--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -128,7 +128,7 @@
          </font>
       </Label>
 
-      <TextField fx:id="nameShopTextField" layoutX="380.0" layoutY="270.0" onAction="#handleKeyCheckShopName" prefHeight="40.0" prefWidth="550.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="nameShopTextField" layoutX="380.0" layoutY="270.0" onKeyReleased="#handleKeyCheckShopName" prefHeight="40.0" prefWidth="550.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
