--- a/src/main/resources/ku/cs/editInformation.fxml
+++ b/src/main/resources/ku/cs/editInformation.fxml
@@ -9,18 +9,19 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.EditInformationController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #c9ad88;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.EditInformationController">
    <children>
       <VBox layoutX="272.0" layoutY="23.0" prefHeight="625.0" prefWidth="378.0" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="22.600000000000023" AnchorPane.topAnchor="23.0">
          <children>
             <AnchorPane prefHeight="625.0" prefWidth="378.0" style="-fx-background-radius: 20; -fx-background-color: white;">
                <children>
-                  <Button layoutX="242.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGoToInformationPageWhenEditInformation" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
+                  <Button layoutX="242.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGoToInformationPageWhenEditInformation" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="บันทึก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
@@ -45,11 +46,21 @@
                         <Font name="JasmineUPC" size="25.0" />
                      </font>
                   </Label>
-                  <Label fx:id="usernameInEditInformationLabel" layoutX="40.0" layoutY="178.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                  </Label>
+                  <HBox layoutX="40.0" layoutY="170.0" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                     <children>
+                        <Label fx:id="usernameInEditInformationLabel" prefHeight="26.0" prefWidth="378.0" styleClass="font_rsu_12pt" stylesheets="@style/PrimaryTheme.css" text="Username">
+                           <font>
+                              <Font name="JasmineUPC" size="25.0" />
+                           </font>
+                           <padding>
+                              <Insets left="3.0" />
+                           </padding>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
                   <Label fx:id="passwordConditionCheckLabel" layoutX="48.0" layoutY="353.0">
                      <font>
                         <Font name="JasmineUPC" size="13.0" />
@@ -60,22 +71,22 @@
                         <Font name="JasmineUPC" size="13.0" />
                      </font>
                   </Label>
-                  <Button layoutX="152.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGotoInformationPageWhenCancel" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ยกเลิก" textFill="WHITE">
+                  <Button layoutX="152.0" layoutY="653.0" mnemonicParsing="false" onAction="#handleGotoInformationPageWhenCancel" prefHeight="28.0" prefWidth="74.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ยกเลิก" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="20.0" />
                      </font>
                   </Button>
-                  <PasswordField fx:id="passwordField" layoutX="41.0" layoutY="323.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                  <PasswordField fx:id="passwordField" layoutX="41.0" layoutY="335.0" onKeyReleased="#handleKeyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
                         <Font name="JasmineUPC" size="16.0" />
                      </font>
                   </PasswordField>
-                  <Text fill="#7d7d7d" layoutX="46.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
+                  <Text fill="#7d7d7d" layoutX="46.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
                      <font>
                         <Font name="JasmineUPC" size="14.0" />
                      </font>
                   </Text>
-                  <PasswordField fx:id="recheckPasswordField" layoutX="41.0" layoutY="371.0" onKeyReleased="#handleKeyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                  <PasswordField fx:id="recheckPasswordField" layoutX="41.0" layoutY="380.0" onKeyReleased="#handleKeyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
                         <Font name="JasmineUPC" size="16.0" />
                      </font>
@@ -85,34 +96,34 @@
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
-                  <Text fill="#7d7d7d" layoutX="32.0" layoutY="171.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้">
+                  <Text fill="#7d7d7d" layoutX="32.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้">
                      <font>
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
-                  <ImageView fx:id="imageView" fitHeight="90.0" fitWidth="90.0" layoutX="196.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="192.5" AnchorPane.rightAnchor="191.60000000000002">
+                  <ImageView fx:id="imageView" fitHeight="90.0" fitWidth="90.0" layoutX="192.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="192.39999999999998">
                      <image>
                         <Image url="@image/Default.png" />
                      </image>
                   </ImageView>
-                  <Text layoutX="22.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="แก้ไขข้อมูลผู้ใช้">
+                  <Text layoutX="162.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="แก้ไขข้อมูลผู้ใช้">
                      <font>
                         <Font name="JasmineUPC" size="36.0" />
                      </font>
                   </Text>
-                  <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="229.0" layoutY="22.0" startX="-63.0" startY="-1.52587890625E-5" />
+                  <Line endX="178.6666259765625" endY="-1.52587890625E-5" layoutX="184.0" layoutY="37.0" startX="-63.0" startY="-1.52587890625E-5" />
                   <Button layoutX="265.0" layoutY="109.0" mnemonicParsing="false" onAction="#handleAddImageButton" style="-fx-background-color: c9ad88; -fx-background-radius: 20;" text="+" />
-                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อ นามสกุล">
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อ - นามสกุล">
                      <font>
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
-                  <TextField fx:id="firstnameTextField" layoutX="41.0" layoutY="240.0" prefHeight="28.0" prefWidth="166.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                  <TextField fx:id="firstnameTextField" layoutX="41.0" layoutY="245.0" prefHeight="28.0" prefWidth="166.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
                         <Font name="JasmineUPC" size="16.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="lastnameTextField" layoutX="264.0" layoutY="240.0" prefHeight="28.0" prefWidth="166.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
+                  <TextField fx:id="lastnameTextField" layoutX="264.0" layoutY="245.0" prefHeight="28.0" prefWidth="166.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;">
                      <font>
                         <Font name="JasmineUPC" size="16.0" />
                      </font>
@@ -143,7 +154,7 @@
                         <Font name="JasmineUPC" size="15.0" />
                      </font>
                   </Label>
-                  <Text fill="#7d7d7d" layoutX="32.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่าน">
+                  <Text fill="#7d7d7d" layoutX="32.0" layoutY="307.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่าน">
                      <font>
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
