--- a/src/main/resources/ku/cs/editInformation.fxml
+++ b/src/main/resources/ku/cs/editInformation.fxml
@@ -133,12 +133,12 @@
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
-                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="571.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เพศ">
+                  <Text fill="#7d7d7d" layoutX="31.0" layoutY="574.0" strokeType="OUTSIDE" strokeWidth="0.0" text="เพศ">
                      <font>
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
-                  <ComboBox fx:id="sexChoice" layoutX="41.0" layoutY="580.0" prefHeight="27.0" prefWidth="84.0" promptText="เพศ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" />
+                  <ComboBox fx:id="sexChoice" layoutX="41.0" layoutY="583.0" prefHeight="27.0" prefWidth="84.0" promptText="เพศ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88; -fx-border-radius: 5;" />
                   <Label fx:id="warningEditInformation" layoutX="149.0" layoutY="628.0" textFill="RED">
                      <font>
                         <Font name="JasmineUPC" size="14.0" />
@@ -159,6 +159,11 @@
                         <Font name="JasmineUPC" size="26.0" />
                      </font>
                   </Text>
+                  <Label fx:id="editPhoneNumberError" layoutX="45.0" layoutY="546.0" onKeyReleased="#handleKeyCheckPhoneNumber" textFill="RED">
+                     <font>
+                        <Font name="JasmineUPC" size="15.0" />
+                     </font>
+                  </Label>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
