--- a/src/main/resources/ku/cs/userListForAdmin.fxml
+++ b/src/main/resources/ku/cs/userListForAdmin.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.UserListForAdminController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.user.UserListForAdminController">
     <children>
         <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -28,7 +28,7 @@
                      </image>
                   </ImageView>
                   <Pane minWidth="630.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" />
-                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="จัดการผู้ใช้" textFill="WHITE">
+                  <Button fx:id="provideUserButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="จัดการผู้ใช้" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="25.0" />
                      </font>
@@ -37,7 +37,7 @@
                      </HBox.margin>
                   </Button>
                   <Pane maxWidth="20.0" minWidth="20.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="จัดการร้านค้า" textFill="WHITE">
+                  <Button fx:id="provideShopButton" mnemonicParsing="false" onAction="#handleToProvideShopButton" prefHeight="38.0" prefWidth="140.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="จัดการร้านค้า" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="25.0" />
                      </font>
