--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -13,8 +13,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -336,11 +338,20 @@
                      </children>
                   </VBox>
                   <Label layoutX="106.0" layoutY="589.0" prefHeight="26.0" prefWidth="189.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
-                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
+                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" onAction="#handleToBuyBook" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Button>
+                  <VBox layoutX="539.0" layoutY="304.0" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <GridPane fx:id="showPopupGrid">
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
         </content>
