--- a/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
+++ b/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
@@ -86,22 +86,6 @@
                                     <Insets left="10.0" top="22.0" />
                                  </HBox.margin>
                               </Label>
-                              <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: F99F28; -fx-border-width: 5; -fx-border-radius: 10; -fx-background-color: ffffff; -fx-background-radius: 10;" text="เพิ่มประเภทหนังสือ">
-                                 <font>
-                                    <Font name="JasmineUPC" size="22.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets left="150.0" top="8.0" />
-                                 </HBox.margin>
-                              </Button>
-                              <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" style="-fx-border-color: F99F28; -fx-border-width: 5; -fx-border-radius: 10; -fx-background-color: ffffff; -fx-background-radius: 10;" text="ประเภทหนังสือร้านค้า">
-                                 <font>
-                                    <Font name="JasmineUPC" size="22.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets left="10.0" top="8.0" />
-                                 </HBox.margin>
-                              </Button>
                            </children>
                         </HBox>
                         <GridPane prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
@@ -120,12 +104,12 @@
                                           <Font name="JasmineUPC" size="36.0" />
                                        </font>
                                     </Label>
-                                    <TextField fx:id="newBooktypeTextField" onKeyReleased="#handleKeyNewBookTypeTextField" layoutX="100.0" layoutY="80.0" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
+                                    <TextField fx:id="newBooktypeTextField" layoutX="100.0" layoutY="80.0" onKeyReleased="#handleKeyNewBookTypeTextField" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 20;">
                                        <font>
                                           <Font name="JasmineUPC" size="28.0" />
                                        </font>
                                     </TextField>
-                                    <Button fx:id="checkBookButton" onAction="#handleEnterTypeBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
+                                    <Button fx:id="checkBookButton" layoutX="750.0" layoutY="81.0" mnemonicParsing="false" onAction="#handleEnterTypeBookButton" prefHeight="43.0" prefWidth="98.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ENTER" textFill="WHITE">
                                        <font>
                                           <Font name="JasmineUPC Bold" size="26.0" />
                                        </font>
@@ -140,7 +124,7 @@
                                           <Font name="JasmineUPC" size="36.0" />
                                        </font>
                                     </Label>
-                                    <Button fx:id="addSubTypeBookButton"  layoutX="290.0" layoutY="196.0" mnemonicParsing="false" onAction="#handleAddSubTypeBookButton" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
+                                    <Button fx:id="addSubTypeBookButton" layoutX="290.0" layoutY="196.0" mnemonicParsing="false" onAction="#handleAddSubTypeBookButton" prefHeight="29.0" prefWidth="25.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 30;" text="+" textFill="WHITE">
                                        <font>
                                           <Font name="JasmineUPC Bold" size="26.0" />
                                        </font>
