--- a/src/main/resources/ku/cs/subscene/reportInformation.fxml
+++ b/src/main/resources/ku/cs/subscene/reportInformation.fxml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="390.0" prefWidth="470.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ReportingInformationController">
+<AnchorPane prefHeight="390.0" prefWidth="470.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.ReportingInformationController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#fffcf1" height="390.0" stroke="#714c08" strokeType="INSIDE" strokeWidth="4.0" width="470.0" AnchorPane.topAnchor="0.0" />
-      <HBox alignment="CENTER" layoutX="100.0" layoutY="14.0" AnchorPane.leftAnchor="100.0">
-         <children>
-            <ImageView fx:id="reportImage" fitHeight="180.0" fitWidth="270.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
-      </HBox>
+      <ImageView fx:id="reportImage" fitHeight="180.0" fitWidth="270.0" layoutX="100.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <HBox alignment="CENTER" layoutX="37.0" layoutY="357.4" prefHeight="28.0" prefWidth="388.0" AnchorPane.bottomAnchor="5.0">
          <children>
             <Text fill="#717171" strokeType="OUTSIDE" strokeWidth="0.0" text="รายงานโดย : ">
@@ -51,5 +51,6 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <Button layoutX="312.0" layoutY="162.0" mnemonicParsing="false" style="-fx-background-color: FFFFFF;" onAction="#handFullImageButton" text="ดูรูปเต็ม" />
    </children>
 </AnchorPane>
