--- a/src/main/resources/ku/cs/userListForAdmin.fxml
+++ b/src/main/resources/ku/cs/userListForAdmin.fxml
@@ -199,6 +199,15 @@
                         </GridPane>
                      </children>
                   </VBox>
+                  <VBox prefHeight="200.0" prefWidth="13.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+                     <children>
+                        <GridPane fx:id="fullImageGrid">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                        </GridPane>
+                     </children>
+                  </VBox>
                </children>
                <stylesheets>
                   <URL value="@style/PrimaryTheme.css" />
